2013-10-22 Blub

	* file locking: Replaced O_EXLOCK with calls to flock(2)

2013-08-05 Blub

	* --integrity: don't show missing / conflicting  package  messages
		multiple times

2013-08-04 Blub (0.1.3)

	* Released

2013-08-04 Blub

	* --wipe: added option to remove all packages
	* libalpm support: integrity checks will use libalpm's vercmp
	* --integrity: dependency and conflict integrity checks added

2013-07-28 Blub

	* -Rstrict:
		Database has a strict flag now.  Will later be used to  change
		how to treat osabi values set to 0.
	* 'josn' config typo fixed:
		In the config file, 'json' was not recognized, as there was  a
		typo making it 'josn', for now both will  be  recognized,  but
		the typo is deprecated (for obvious reasons...)

2013-07-15 Blub

	* -Rpkg-ld-append, --ld-append:
		Fixed bug: append inserted before the last element...   *sigh*

2013-07-09 Blub (0.1.2)

	* Released

2013-07-09 Blub

	* database format change:
		Added a bitfield to mask rules and library paths from being to
		the database.  Writing a database with no  rule  entries  will
		cause version 1 to be used.
	* configuration file:
		will now look  for  config  files  ~/.pkgdepdb/config  or  for
		pkgdepdb.conf in $(SYSCONFDIR)
	* package dependency tracking:
		Now also reading depend= and optdepend= entries from  .PKGINFO
		files.  Databases with package-dependency info  will  use  the
		database format version 3 as it modifies the way packages  are
		serialized.
		Dependency tracking can be enabled or disabled in  the  config
		or via the --depends commandline switch.
	* base package list:
		A list of base packages can be created which contains  a  list
		of packages which will be  assumed  installed  during  package
		aware dependency checks.
	* json option:
		--json or -J now take a parameter specifying where json format
		is supposed to be used.

2013-07-08 Blub

	* queries/json:
		json formatted output for all queries for the sake of
		machine readability.