@@ -1,6 +1,8 @@
 2013-10-22 Blub
 
 	* file locking: Replaced O_EXLOCK with calls to flock(2)
+	* database format 5:
+		Packages now store the list of groups they're part of.
 
 2013-08-05 Blub
 
